case 1718 - Checking how behaviors interaction with spinner. Adding once() on events I do not want to be re-triggered when behaviour will be re-attached. Utilizing spin.js instead of .gif file. Aligning "Stop search" string with spinner.

--- a/css/ting_search_spinner.css
+++ b/css/ting_search_spinner.css
@@ -10,12 +10,13 @@
   margin-right: auto;
   background: black;
 }
-.ting-search-spinner-placeholder-wrapper{
-  position: absolute;
-  top: 200px;
-  left: 200px;
+.overlay-spinner{
+  margin-left: auto;
+  margin-right: auto;
+
 }
 .close-ting-search-spinner{
+  position: absolute;
   color:black;
   z-index: 1001;
 }
